--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: icon_stack
-description: Flutter widget for displaying stacked icons
+description: Flutter widget for displaying stacked transformable icons as one icon
 version: 1.0.1
-repository: https://github.com/Aygistov/icon_stack
+repository: https://github.com/aygistov/icon_stack
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
